[package]
name = "mf-content-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
faunadb = "0.0.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
jsonwebtoken = "7"
base64 = "0.13"
hmac = "0.11"
sha2 = "0.9"
chrono = "0.4.19"